# oop_course_project

./: .gitignore  AutoExport.pptx  AutoExport_20251220_170455.pptx  CMakeLists.txt  README.md  export.pptx  main.cpp  new.pptx  oop_course_project.code-workspace  output.txt  presentation.hpp  qt_main.cpp  script.sh  shape.hpp  slide.hpp  test.pptx
gui/: CanvasView.cpp  CanvasView.hpp  CanvasWidget.cpp  CanvasWidget.hpp  MainWindow.cpp  MainWindow.hpp  QtLogStream.cpp  QtLogStream.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SlideList.cpp  SlideList.hpp
include/: Color.hpp  CommandParser.hpp  Commands.hpp  Controller.hpp  FitUtils.hpp  Functions.hpp  ICommand.hpp  PPTXExporter.hpp  PPTXSerializer.hpp  Serializer.hpp  Shape.hpp  Slide.hpp  SlideShow.hpp  Token.hpp  Tokenizer.hpp  Utils.hpp  presentation.hpp  shape.hpp  slide.hpp
src/: CommandParser.cpp  Commands.cpp  Controller.cpp  Functions.cpp  ICommand.cpp  PPTXExporter.cpp  PPTXSerializer.cpp  Serializer.cpp  Shape.cpp  Slide.cpp  SlideShow.cpp  Token.cpp  Tokenizer.cpp  main.cpp  pp1.txt
